--- a/app/src/main/res/layout/activity_kunst.xml
+++ b/app/src/main/res/layout/activity_kunst.xml
@@ -6,61 +6,233 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".KunstActivity">
+  <!-- Sektion 1 -->
+
+  <!-- Sektion 2 -->
 
   <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_width="416dp"
+      android:layout_height="729dp"
       android:orientation="vertical"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">
 
-    <!-- Store beskrivelse TextView -->
-    <TextView
-        android:id="@+id/titleTextView"
+    <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Titel"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:orientation="vertical">
 
-    <!-- Lille TextView 1 -->
+      <TextView
+          android:id="@+id/titleTextView"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:gravity="center"
+          android:text="Beskrivelse 1"
+          android:textSize="20sp"
+          android:textStyle="bold" />
+
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tekst 11"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tekst 12"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tekst 13"
+            android:textSize="16sp" />
+      </LinearLayout>
+
+      <TextView
+          android:id="@+id/textView4"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="Tekst 14"
+          android:textSize="16sp" />
+
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
       <TextView
-          android:id="@+id/textView1"
-          android:layout_width="0dp"
+          android:id="@+id/secondTitleTextView"
+          android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:text="Tekst 1"
-          android:textSize="16sp" />
+          android:gravity="center"
+          android:text="Beskrivelse 2"
+          android:textSize="20sp"
+          android:textStyle="bold" />
+
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/secondTextView1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tekst 21"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/secondTextView2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tekst 22"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/secondtTextView3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tekst 23"
+            android:textSize="16sp" />
+      </LinearLayout>
 
       <TextView
-          android:id="@+id/textView2"
-          android:layout_width="0dp"
+          android:id="@+id/secondTextView4"
+          android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:text="Tekst 2"
+          android:text="Tekst 24"
           android:textSize="16sp" />
 
-      <TextView
-          android:id="@+id/textView3"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:text="Tekst 3"
-          android:textSize="16sp" />
     </LinearLayout>
 
-    <!-- Lille TextView 2 -->
-    <TextView
-        android:id="@+id/textView4"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Tekst 4"
-        android:textSize="16sp" />
+        android:orientation="vertical">
+
+      <TextView
+          android:id="@+id/thirdTitleTextView"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:gravity="center"
+          android:text="Beskrivelse 1"
+          android:textSize="20sp"
+          android:textStyle="bold" />
+
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/thirdTextView1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tekst 11"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/thirdTextView2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tekst 12"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/thirdTextView3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tekst 13"
+            android:textSize="16sp" />
+      </LinearLayout>
+
+      <TextView
+          android:id="@+id/thirdTextView4"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="Tekst 14"
+          android:textSize="16sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+      <TextView
+          android:id="@+id/fourthTitleTextView"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:gravity="center"
+          android:text="Beskrivelse 1"
+          android:textSize="20sp"
+          android:textStyle="bold" />
+
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/fourthTextView1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tekst 11"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/fourthTextView2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tekst 12"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/fourthTextView3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tekst 13"
+            android:textSize="16sp" />
+      </LinearLayout>
+
+      <TextView
+          android:id="@+id/fourthTextView4"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="Tekst 14"
+          android:textSize="16sp" />
+
+    </LinearLayout>
   </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
