--- a/app/src/main/res/layout/activity_interests.xml
+++ b/app/src/main/res/layout/activity_interests.xml
@@ -11,15 +11,14 @@
 
 
     <LinearLayout
-        android:layout_width="405dp"
-        android:layout_height="480dp"
-        android:layout_marginBottom="48dp"
+        android:layout_width="407dp"
+        android:layout_height="324dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="203dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -106,5 +105,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView14"
+        android:layout_width="169dp"
+        android:layout_height="207dp"
+        app:srcCompat="@drawable/blomst"
+        tools:layout_editor_absoluteX="240dp"
+        tools:layout_editor_absoluteY="531dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
