--- a/app/src/main/res/layout/activity_education.xml
+++ b/app/src/main/res/layout/activity_education.xml
@@ -9,12 +9,13 @@
 
     <LinearLayout
         android:layout_width="405dp"
-        android:layout_height="480dp"
-        android:layout_marginBottom="48dp"
+        android:layout_height="382dp"
+        android:layout_marginBottom="132dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
 
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints">
 
@@ -137,6 +138,14 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="208dp"
+        android:layout_height="212dp"
+        app:srcCompat="@drawable/blomst2"
+        tools:layout_editor_absoluteX="239dp"
+        tools:layout_editor_absoluteY="541dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
