--- a/app/src/main/res/layout/activity_kunst.xml
+++ b/app/src/main/res/layout/activity_kunst.xml
@@ -26,6 +26,7 @@
 
       <TextView
           android:id="@+id/titleTextView"
+          android:textColor="@color/black"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
